# entry.io

./: .gitignore  AGENT.md  LICENSE  README.md
backend/: .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260207_0001_init_schema.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: announcements.py  attendance.py  auth.py  classes.py  enrollment.py  health.py  plans.py  qna.py  sessions.py  users.py
backend/app/core/: config.py  logging.py  middleware.py  rate_limit.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  announcement.py  attendance.py  class_.py  enrollment.py  plan.py  qna.py  session.py  user.py
backend/app/repositories/: announcement_repo.py  attendance_repo.py  class_repo.py  enrollment_repo.py  plan_repo.py  qna_repo.py  session_repo.py  user_repo.py
backend/app/schemas/: announcement.py  attendance.py  auth.py  class_.py  common.py  enrollment.py  plan.py  qna.py  session.py  user.py
backend/app/services/: announcement_service.py  attendance_service.py  auth_service.py  class_service.py  enrollment_service.py  plan_service.py  qna_service.py  session_service.py
backend/app/utils/: ids.py  pagination.py  time.py
backend/docker/: Dockerfile  entrypoint.sh
backend/tests/: conftest.py  test_auth.py  test_classes.py  test_enrollment.py  test_qna.py  test_rbac.py
